--- a/starter/03-CSS-Fundamentals/index.html
+++ b/starter/03-CSS-Fundamentals/index.html
@@ -17,7 +17,8 @@
     <h6>The Basic Language of the Web: HTML</h6>
     -->
 <!-- 组织基本网页，使用<head>,<body>,body之中使用<haeder> <article><aside><footer> -->
-    <header>
+    <div class="container">
+    <header class="main-header">
       <h1>📘 The Code Magazine</h1>
 
       <nav>
@@ -50,6 +51,7 @@
           width="500"
           height="200"
         />
+        <button class="like-button">❤️like</button>
       </header>
 
       <p>
@@ -159,5 +161,8 @@
     <footer>
         <p id="copyright" class="copyright">Copyright &copy; 2027 by The Code Magazine.</p>
     </footer>
+
+    </div>
+    
   </body>
 </html>
