--- a/final/04-CSS-Layouts/css-grid.html
+++ b/final/04-CSS-Layouts/css-grid.html
@@ -56,6 +56,9 @@
         /* TEMP */
         display: none;
       }
+      .el--1 {
+        grid-column: 1 / -1;
+      }
 
       .el--8 {
         grid-column: 2 / 3;
