--- a/final/04-CSS-Layouts/index-grid.html
+++ b/final/04-CSS-Layouts/index-grid.html
@@ -18,7 +18,7 @@
     -->
 
     <div class="container">
-      <header class="main-header clearfix">
+      <header class="main-header ">
         <h1>📘 The Code Magazine</h1>
 
         <nav>
